# cmake_glfw_glad_template

./: CMakeLists.txt  README.md
